[package]
name = "honchod"
version = "0.1.0"
authors = ["Marcos Oliveira <marcosvm@gmail.com>"]
edition = "2018"


[[bin]]
name = "honchod"
path = "src/server.rs"

[[bin]]
name = "honchoc"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.4", features = ["transport", "tls"] }
prost = "0.7"
tokio = { version = "1.0", features = ["macros","rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"
